Ajoute les tests unitaires